--- a/package.json
+++ b/package.json
@@ -3,16 +3,35 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/plugin-proposal-decorators": "^7.4.4",
         "antd": "^3.19.1",
+        "axios": "^0.18.0",
         "babel-plugin-import": "^1.11.2",
+        "classnames": "^2.2.6",
         "customize-cra": "^0.2.12",
+        "history": "^4.9.0",
         "http-proxy-middleware": "^0.19.1",
         "less": "^3.9.0",
         "less-loader": "^5.0.0",
+        "lodash": "^4.17.11",
+        "moment": "^2.24.0",
+        "nprogress": "^0.2.0",
+        "nzh": "^1.0.4",
+        "rc-texty": "^0.2.0",
+        "rc-tween-one": "^2.4.1",
         "react": "^16.8.6",
         "react-app-rewired": "^2.1.3",
+        "react-container-query": "^0.11.0",
+        "react-document-title": "^2.0.3",
         "react-dom": "^16.8.6",
-        "react-scripts": "3.0.1"
+        "react-media": "^1.9.2",
+        "react-redux": "^7.0.3",
+        "react-router-dom": "^5.0.0",
+        "react-router-redux": "^4.0.8",
+        "react-scripts": "3.0.1",
+        "redux": "^4.0.1",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.3.0"
     },
     "scripts": {
         "start": "react-app-rewired start",
