--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "moment": "^2.24.0",
         "nprogress": "^0.2.0",
         "nzh": "^1.0.4",
+        "rc-queue-anim": "^1.6.12",
         "rc-texty": "^0.2.0",
         "rc-tween-one": "^2.4.1",
         "react": "^16.8.6",
