--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-container-query": "^0.11.0",
         "react-document-title": "^2.0.3",
         "react-dom": "^16.8.6",
+        "react-loadable": "^5.5.0",
         "react-media": "^1.9.2",
         "react-redux": "^7.0.3",
         "react-router-dom": "^5.0.0",
