--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@antv/data-set": "^0.10.2",
         "@babel/plugin-proposal-decorators": "^7.4.4",
         "antd": "^3.19.1",
         "axios": "^0.18.0",
         "babel-plugin-import": "^1.11.2",
+        "bizcharts": "^3.5.3",
         "classnames": "^2.2.6",
         "customize-cra": "^0.2.12",
         "history": "^4.9.0",
@@ -24,6 +26,7 @@
         "react": "^16.8.6",
         "react-app-rewired": "^2.1.3",
         "react-container-query": "^0.11.0",
+        "react-countup": "^4.1.3",
         "react-document-title": "^2.0.3",
         "react-dom": "^16.8.6",
         "react-loadable": "^5.5.0",
