--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
         "axios": "^0.18.0",
         "babel-plugin-import": "^1.11.2",
         "bizcharts": "^3.5.3",
+        "braft-editor": "^2.3.2",
         "classnames": "^2.2.6",
         "customize-cra": "^0.2.12",
+        "data-generator-retail": "^2.8.5",
         "history": "^4.9.0",
         "http-proxy-middleware": "^0.19.1",
         "jinrishici": "^1.0.6",
