--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "history": "^4.9.0",
         "http-proxy-middleware": "^0.19.1",
         "jinrishici": "^1.0.6",
+        "jwt-decode": "^2.2.0",
         "less": "^3.9.0",
         "less-loader": "^5.0.0",
         "lodash": "^4.17.11",
@@ -39,6 +40,7 @@
         "react-scripts": "3.0.1",
         "redux": "^4.0.1",
         "redux-logger": "^3.0.6",
+        "redux-saga": "^1.0.2",
         "redux-thunk": "^2.3.0"
     },
     "scripts": {
