--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-router-dom": "^5.0.0",
         "react-router-redux": "^4.0.8",
         "react-scripts": "3.0.1",
+        "react-syntax-highlighter": "^10.3.0",
         "redux": "^4.0.1",
         "redux-logger": "^3.0.6",
         "redux-saga": "^1.0.2",
