--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "@antv/data-set": "^0.10.2",
         "@babel/plugin-proposal-decorators": "^7.4.4",
+        "@material-ui/core": "^4.1.1",
+        "@material-ui/icons": "^4.2.0",
         "antd": "^3.19.1",
         "axios": "^0.18.0",
         "babel-plugin-import": "^1.11.2",
